[package]
name = "pi-monte-carlo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
cubecl = { git = "https://github.com/tracel-ai/cubecl.git", branch = "main", features = ["wgpu", "hip", "cuda"] }
massively = { git = "https://github.com/akiradeveloper/massively", tag = "v0.74" }
